--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,45 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-default navbar-fixed-top" id="navigation">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed"
+      data-toggle="collapse" data-target="#menu-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       {{#link-to "index" class="navbar-brand" id="logoImg"}}<img src="/img/logo.png" alt="Logo" >{{/link-to}}
+       <button type="button" class="btn btn-glyphicon" {{action 'sidebarToggle'}}>
+         <span class="glyphicon glyphicon-menu-hamburger" > </span>
+       </button>
+    </div>
 
-{{outlet}}
+    <div class="collapse navbar-collapse" id="menu-collapse">
+      <ul class="nav navbar-nav">
+      </ul>
+    </div>
+  </div>
+</nav>
+<div  id="mainpage">
+    <!-- Sidebar -->
+       <div id="sidebar-wrapper">
+           <ul class="sidebar-nav">
+               <li>
+                  {{#link-to "profile"}}Profile{{/link-to}}
+               </li>
+               <li>
+                  {{#link-to "newoffer"}}New offer{{/link-to}}
+               </li>
+               <li>
+                  {{#link-to "offers"}}My offers{{/link-to}}
+               </li>
+           </ul>
+       </div>
+       <!-- /#sidebar-wrapper -->
+  <div id="page-content-wrapper">
+    <div class="container-fluid" >
+      {{outlet 'bootstrap-modal'}}
+    {{outlet}}
+  </div>
+  </div>
+</div>
